copy update for filters

--- a/card1.html
+++ b/card1.html
@@ -24,7 +24,7 @@
     <style>
 
 #chart svg {
-  height: 400px;
+  height: 450px;
 }
 </style>
 	
@@ -33,17 +33,17 @@
 </head>
 <body>
 	<header class="cd-header">
-		<h1>Card1</h1>
+		<h1>Apples vs. Oranges</h1>
 	</header>
 
 	<main class="cd-main-content">
 		<section class="cd-gallery">
 			<ul>
 			<div id="container">
-				Spurious Correlations "ヽ༼ʘ̚͜ʘ̚༽ﾉ"
+				Spurious Correlation
 				<div id="chart">
-				<svg></svg> 
-			</div>
+					<svg></svg> 
+				</div>
 			</div>
 			</ul>
 		</section> <!-- cd-gallery -->
